--- a/settings.gradle
+++ b/settings.gradle
@@ -14,4 +14,5 @@ dependencyResolutionManagement {
 }
 rootProject.name = "Social_Feed"
 include ':app'
-include ':Data'
+include ':data'
+include ':use-cases'
